added warning if its unable to clean playground