@@ -23,7 +23,7 @@ public class TimeoutCommand {
         final int timeoutInSeconds = IntegerArgumentType.getInteger(ctx, "seconds");
         TIMEOUT_IN_TICKS = timeoutInSeconds * 20;
 
-        ctx.getSource().sendFeedback(() -> Text.literal(String.format(chatModPrefix + "Timeout set to %s", timeoutInSeconds)), false);
+        ctx.getSource().sendFeedback(() -> Text.literal(chatModPrefix + "Timeout set to %s".formatted(timeoutInSeconds)), false);
         return 0;
     }
 }
